[gd_scene load_steps=17 format=2]

[ext_resource path="res://supabase-ui/basic/typography/base_label/BaseLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://supabase-ui/res/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://res/imgs/rounded.svg" type="Texture" id=3]
[ext_resource path="res://scn/classes/avatar/Avatar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scn/classes/user/User.gd" type="Script" id=5]
[ext_resource path="res://res/imgs/icons/more_vert_white_36dp.svg" type="Texture" id=6]
[ext_resource path="res://supabase-ui/basic/button/text/TextButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scn/scenes/popup_user/PopupUser.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="VisualShaderNodeTexture" id=2]
texture = ExtResource( 3 )

[sub_resource type="VisualShaderNodeTexture" id=3]
source = 2

[sub_resource type="VisualShader" id=4]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_2;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// Texture:2
	vec4 tex_frg_2_read = texture(tex_frg_2, UV.xy);
	vec3 n_out2p0 = tex_frg_2_read.rgb;
	float n_out2p1 = tex_frg_2_read.a;

// Output:0
	COLOR.rgb = n_out3p0;
	COLOR.a = n_out2p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -321, 55 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 2 )
nodes/fragment/2/position = Vector2( -80, 300 )
nodes/fragment/3/node = SubResource( 3 )
nodes/fragment/3/position = Vector2( 20, 120 )
nodes/fragment/connections = PoolIntArray( 2, 1, 0, 1, 3, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
render_priority = 1
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 15
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
resource_local_to_scene = true
resource_name = "TextButton"
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.0392157 )
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[node name="User" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 70.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 60.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" parent="User" instance=ExtResource( 4 )]
material = SubResource( 5 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Label" parent="User" instance=ExtResource( 1 )]
margin_left = 65.0
margin_right = 961.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
valign = 1
autowrap = true
clip_text = true

[node name="Options" parent="User" instance=ExtResource( 7 )]
margin_left = 976.0
margin_top = 11.0
margin_right = 1004.0
margin_bottom = 39.0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )
icon_enabled = true
texture = ExtResource( 6 )
expand = true
size = Vector2( 18, 18 )
text_enabled = false

[node name="PopupUser" parent="." instance=ExtResource( 8 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 156.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 8 )

[connection signal="pressed" from="User/Options" to="." method="_on_Options_pressed"]
[connection signal="logout" from="PopupUser" to="." method="_on_PopupUser_logout"]
[connection signal="update_user" from="PopupUser" to="." method="_on_PopupUser_update_user"]
